# airline-ticket-cli

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  main.py  pyproject.toml
.github/workflows/: tests.yml
airline/: __init__.py  api.py  auth.py  booking.py  checkin.py  cli.py  flights.py  management.py  paths.py  sales.py  state.py  storage.py  validation.py
data/: aircraft_models.csv  airports.csv  flights.csv  guest_passengers.csv  occupied_seats.csv  scheduled_flights.csv  seat_inventory.csv  tickets.csv  users.csv
tests/: test_architecture.py  test_storage.py  test_validation.py
